# kinco_diff_controller

./: CMakeLists.txt  kinco_diff_controller.xml  package.xml
config/: controllers.yaml
include/kinco_diff_controller/: drivetrain_system.hpp  motor.hpp  motor_interface.hpp
launch/: drivetrain.launch.py
src/: drivetrain_system.cpp  motor.cpp  motor_interface.cpp
urdf/: drivetrain.urdf.xacro  robot_control.urdf.xacro  robot_description.urdf.xacro  robot_materials.urdf.xacro
